--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore source dependencies
-      run: dotnet restore ./src\DataStructures/
+      run: dotnet restore ./src/DataStructures/
     - name: Build
       run: dotnet build --no-restore ./src/DataStructures/
     - name: Test
