--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET workflow
 
 on:
@@ -18,8 +15,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore source dependencies
-      run: dotnet restore ./src/DataStructures/
+      run: dotnet restore ./src/DataStructures/DataStructures.sln
     - name: Build
-      run: dotnet build --no-restore ./src/DataStructures/
+      run: dotnet build --no-restore ./src/DataStructures/DataStructures.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal ./tests/DataStructuresTests/
+      run: dotnet test --no-build --verbosity normal ./tests/DataStructuresTests/DataStructuresTests.sln
